--- a/public/verify.html
+++ b/public/verify.html
@@ -20,7 +20,7 @@
                             <div class="mb-md-5 mt-md-4 pb-5">
                                 <h2 class="fw-bold mb-2">Verify Certificate</h2>
                                 <p class="text-white-50 mb-5">Please enter the certificate hash you want to check</p>
-                                <form action="submit_handler.php" method="POST">
+                                <form action="/verifyCertificate" method="GET">
                                     <div class="form-outline form-white mb-4">
                                         <input type="text" class="form-control form-control-lg" />
                                     </div>
