--- a/public/verify.html
+++ b/public/verify.html
@@ -20,9 +20,9 @@
                             <div class="mb-md-5 mt-md-4 pb-5">
                                 <h2 class="fw-bold mb-2">Verify Certificate</h2>
                                 <p class="text-white-50 mb-5">Please enter the certificate hash you want to check</p>
-                                <form action="/verifyCertificate" method="GET">
+                                <form action="/VerifyCertificate" method="POST">
                                     <div class="form-outline form-white mb-4">
-                                        <input type="text" class="form-control form-control-lg" />
+                                        <input name="tokenId" type="text" class="form-control form-control-lg" />
                                     </div>
                                     <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Verify Certificate">
                                 </form>
