--- a/public/home.html
+++ b/public/home.html
@@ -16,10 +16,10 @@
 					<div class="card bg-dark text-white" style="border-radius: 1rem;">
 						<div class="card-body p-5 text-center">
 							<div class="mb-md-5 mt-md-4 pb-5">
-								<h2 class="fw-bold mb-2">EduChain</h2>
-								<p class="text-white-50 mb-5">Please select an action</p>
-								<a href="/create" class="btn btn-outline-light btn-lg px-5 mb-4">Create Certificate</a>
-								<a href="/verify" class="btn btn-outline-light btn-lg px-5">Verify Certificate</a>
+								<h2 class="fw-bold mb-2">⚖️ EduChain 🔗</h2>
+								<p class="text-white-50 mb-5">Create or a verify a certificate on the EduChain!</p>
+								<a href="/create" class="btn btn-outline-light btn-lg px-5 mb-4 w-75">Create Certificate</a>
+								<a href="/verify" class="btn btn-outline-light btn-lg px-5 w-75">Verify Certificate</a>
 							</div>
 						</div>
 					</div>
