--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 						<div class="card-body p-5 text-center">
 							<div class="mb-md-5 mt-md-4 pb-5">
 								<h2 class="fw-bold mb-2">Hey there! 👋</h2>
-								<p class="text-white-50 mb-5">Please click the button below to login</p>
+								<p class="text-white-50 mb-5">Please click the button below to login.</p>
 								<a href="/auth/google/login" class="btn btn-outline-light btn-lg px-5">Continue with Google</a>
 							</div>
 						</div>
