--- a/public/create.html
+++ b/public/create.html
@@ -18,8 +18,8 @@
                     <div class="card bg-dark text-white" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center">
                             <div class="mb-md-5 mt-md-4 pb-5">
-                                <h2 class="fw-bold mb-2">Create Certificate</h2>
-                                <p class="text-white-50 mb-5">Please enter the certificate details</p>
+                                <h2 class="fw-bold mb-2">🛠️ Create Certificate 🛠️</h2>
+                                <p class="text-white-50 mb-5">Please enter the certificate details below.</p>
                                 <form action="/CreateCertificate" method="POST">
                                     <div class="form-outline form-white mb-4">
                                         <input name="studentName" type="text" class="form-control form-control-lg"
@@ -34,7 +34,7 @@
                                     </div>
                                     <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Create Certificate">
                                 </form>
-                                <a href="/" class="btn btn-outline-light btn-lg px-5 mt-4">Cancel</a>
+                                <a href="/home" class="btn btn-outline-light btn-lg px-5 mt-4">Cancel</a>
                             </div>
                         </div>
                     </div>
