--- a/public/verify.html
+++ b/public/verify.html
@@ -18,15 +18,15 @@
                     <div class="card bg-dark text-white" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center">
                             <div class="mb-md-5 mt-md-4 pb-5">
-                                <h2 class="fw-bold mb-2">Verify Certificate</h2>
-                                <p class="text-white-50 mb-5">Please enter the certificate hash you want to check</p>
+                                <h2 class="fw-bold mb-2">🔬 Verify Certificate 🔬</h2>
+                                <p class="text-white-50 mb-5">Please submit the Certificate ID to be verified.</p>
                                 <form action="/VerifyCertificate" method="POST">
                                     <div class="form-outline form-white mb-4">
                                         <input name="tokenId" type="text" class="form-control form-control-lg" />
                                     </div>
                                     <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Verify Certificate">
                                 </form>
-                                <a href="/" class="btn btn-outline-light btn-lg px-5 mt-4">Cancel</a>
+                                <a href="/home" class="btn btn-outline-light btn-lg px-5 mt-4">Cancel</a>
                             </div>
                         </div>
                     </div>
