Tie up some loose ends

--- a/public/create.html
+++ b/public/create.html
@@ -22,12 +22,10 @@
                                 <p class="text-white-50 mb-5">Please enter the certificate details below.</p>
                                 <form action="/CreateCertificate" method="POST">
                                     <div class="form-outline form-white mb-4">
-                                        <input name="studentName" type="text" class="form-control form-control-lg"
-                                            placeholder="Student Name" />
+                                        <input name="studentName" type="text" class="form-control form-control-lg" placeholder="Student Name" />
                                     </div>
                                     <div class="form-outline form-white mb-4">
-                                        <input name="certificateName" type="text" class="form-control form-control-lg"
-                                            placeholder="Certificate Name" />
+                                        <input name="certificateName" type="text" class="form-control form-control-lg" placeholder="Certificate Name" />
                                     </div>
                                     <div class="form-outline form-white mb-4">
                                         <input name="message" type="text" class="form-control form-control-lg" placeholder="Message" />
